--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# Copyright 2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -24,23 +24,16 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-name: "detection_preprocessing"
-backend: "python"
-max_batch_size: 256
-input [
-{
-    name: "detection_preprocessing_input"
-    data_type: TYPE_UINT8
-    dims: [ -1 ]
-}
-]
+name: pre-commit
 
-output [
-{
-    name: "detection_preprocessing_output"
-    data_type: TYPE_FP32
-    dims: [ -1, -1, 3 ]
-}
-]
+on:
+  pull_request:
 
-instance_group [{ kind: KIND_CPU }]
+jobs:
+  pre-commit:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+    - uses: pre-commit/action@v3.0.0
+
