Updated version of vllm (#64)

--- a/Quick_Deploy/vLLM/Dockerfile
+++ b/Quick_Deploy/vLLM/Dockerfile
@@ -25,4 +25,4 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 FROM nvcr.io/nvidia/tritonserver:23.09-py3
-RUN pip install vllm==0.2.0
+RUN pip install vllm==0.2.1.post1
