Triton Inference Server In-Process Python API BETA
Tutorial demonstrating basic examples of using the Triton Inference Server In-Process Python API.

--- a/Triton_Inference_Server_Python_API/docker/Dockerfile
+++ b/Triton_Inference_Server_Python_API/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2022-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# Copyright 2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -24,27 +24,37 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-backend: "python"
-max_batch_size: 8
+ARG BASE_IMAGE=nvcr.io/nvidia/tritonserver
+ARG BASE_IMAGE_TAG=23.12-py3
 
-input [
-  {
-    name: "prompt"
-    data_type: TYPE_STRING
-    dims: [1]
-  }
-]
-output [
-  {
-    name: "generated_image"
-    data_type: TYPE_FP32
-    dims: [ -1, -1, -1]
-  }
-]
+FROM ${BASE_IMAGE}:${BASE_IMAGE_TAG} as triton-python-api
 
-instance_group [
-  {
-    kind: KIND_GPU
-  }
-]
+RUN apt-get update; apt-get install -y gdb
+
+COPY ./deps/requirements.txt /tmp/requirements.txt
+
+RUN pip install --timeout=2000 -r /tmp/requirements.txt
+
+# Finish pyright install
+
+ RUN pyright --help
+
+ARG FRAMEWORK=HF_DIFFUSERS
+
+COPY ./deps/requirements_torch.txt /tmp/requirements_torch.txt
+RUN if [[ "$FRAMEWORK" == "DIFFUSERS" ]] ; then pip install --timeout=2000 -r /tmp/requirements_torch.txt ; fi
+
+COPY ./deps/tritonserver-2.41.0.dev0-py3-none-any.whl /tmp/tritonserver-2.41.0.dev0-py3-none-any.whl
+
+RUN pip3 install --force-reinstall --upgrade /tmp/tritonserver-2.41.0.dev0-py3-none-any.whl[all]
+
+RUN ln -sf /bin/bash /bin/sh
+
+COPY . /workspace
+
+ARG RUN_TESTS=FALSE
+
+RUN if [[ "$RUN_TESTS" == "TRUE" ]] ; then cd /tmp && git clone -b r23.12-python-api https://github.com/triton-inference-server/core.git && cp -rf /tmp/core/python/test /workspace/deps/ ; fi
+
+RUN if [[ "$RUN_TESTS" == "TRUE" ]] ; then pytest /workspace/deps ; fi
 
