--- a/Triton_Inference_Server_Python_API/deps/requirements_torch.txt
+++ b/Triton_Inference_Server_Python_API/deps/requirements_torch.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2022-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# Copyright 2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -24,27 +24,10 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-backend: "python"
-max_batch_size: 8
-
-input [
-  {
-    name: "prompt"
-    data_type: TYPE_STRING
-    dims: [1]
-  }
-]
-output [
-  {
-    name: "generated_image"
-    data_type: TYPE_FP32
-    dims: [ -1, -1, -1]
-  }
-]
-
-instance_group [
-  {
-    kind: KIND_GPU
-  }
-]
-
+accelerate
+diffusers==0.9.0
+torch
+torchaudio
+torchvision
+transformers
+transformers[onnxruntime]
