Stable Diffusion 1.5 and Stable Diffusion XL Tutorials
Stable Diffusion Tutorials 

---------

Co-authored-by: Neelay Shah <neelays@luna-prod-1315-au.ipp3u1.colossus.nvidia.com>
Co-authored-by: Ryan McCormick <rmccormick@nvidia.com>
Co-authored-by: Francesco Petrini <francescogpetrini@gmail.com>
Co-authored-by: Katherine Yang <80359429+jbkyang-nvi@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Pretrained Models
-*.onnx
+**/*.onnx
+**/onnx/*.opt
+**/*.bin
+**/*.plan
+**/pytorch_model
 
 # Python Stuff
-__pycache__
+**/__pycache__
 
 # Downloaded Assets
-downloads
+**/downloads
