--- a/Popular_Models_Guide/StableDiffusion/docker/Dockerfile.dockerignore
+++ b/Popular_Models_Guide/StableDiffusion/docker/Dockerfile.dockerignore
@@ -1,4 +1,3 @@
-#!/bin/bash -e
 # Copyright 2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -25,13 +24,10 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-cd /mount
-pip3 install -r requirements_model_export.txt
-huggingface-cli login --token $HF_TOKEN
-python export.py
-trtexec --onnx=vae.onnx --saveEngine=vae.plan --minShapes=latent_sample:1x4x64x64 --optShapes=latent_sample:4x4x64x64 --maxShapes=latent_sample:8x4x64x64 --fp16
-mkdir -p models/vae/1
-mkdir -p models/text_encoder/1
-mv vae.plan models/vae/1/model.plan
-mv encoder.onnx models/text_encoder/1/model.onnx
-
+**/*.onnx
+**/*.plan
+**/*.cache/*
+**/*onnx*
+**/*engine*
+**/*pytorch_model*
+**/*.pth*
