--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Dont upload the larger files
 **/None-ResNet-None-CTC.pth
+Conceptual_Guide/Part_1-model_deployment/model_re
 Conceptual_Guide/Part_1-model_deployment/.hf_token
 Conceptual_Guide/Part_1-model_deployment/triton/meta-llama-3.2-1B.tar
 Conceptual_Guide/Part_1-model_deployment/ollama/llama-2-7b.Q8_0.gguf
